--- a/checkout.html
+++ b/checkout.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="checkout-header-middle-section">
-                Checkout (<a class="return-to-home-link" href="amazon.html">3 items</a>)
+                Checkout (<a class="return-to-home-link" href="amazon.html"><span class="js-cart-quantity-link"></span> Items</a>)
             </div>
 
             <div class="checkout-header-right-section">
