--- a/checkout.html
+++ b/checkout.html
@@ -21,23 +21,7 @@
 </head>
 
 <body>
-    <div class="checkout-header">
-        <div class="header-content">
-            <div class="checkout-header-left-section">
-                <a href="amazon.html">
-                    <img class="amazon-logo" src="images/amazon-logo.png">
-                    <img class="amazon-mobile-logo" src="images/amazon-mobile-logo.png">
-                </a>
-            </div>
-
-            <div class="checkout-header-middle-section">
-                Checkout (<a class="return-to-home-link" href="amazon.html"><span class="js-cart-quantity-link"></span> Items</a>)
-            </div>
-
-            <div class="checkout-header-right-section">
-                <img src="images/icons/checkout-lock-icon.png">
-            </div>
-        </div>
+    <div class="checkout-header js-checkout-header">
     </div>
 
     <div class="main">
@@ -45,11 +29,9 @@
 
         <div class="checkout-grid">
             <div class="order-summary js-order-summary">
-                
             </div>
 
-            <div class="payment-summary js-payment-summary">
-                
+            <div class="payment-summary js-payment-summary">  
             </div>
         </div>
     </div>
