--- a/testJasmine/test.html
+++ b/testJasmine/test.html
@@ -13,16 +13,13 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
-  <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
-
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="spec/moneyTest.js" type="module"></script>
+  <script src="spec/cartTest.js" type="module"></script>
 
 </head>
 
 <body>
+    
 </body>
 </html>
