Automate testing for cartOrderSummary

--- a/testJasmine/test.html
+++ b/testJasmine/test.html
@@ -13,13 +13,16 @@
   <!-- optional: include a file here that configures the Jasmine env -->
   <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
+  <!-- RUN JASMINE IN CHROME... IT DOESNT WORK IN FIREFOX -->
+   
   <!-- include spec files here... -->
   <script src="spec/moneyTest.js" type="module"></script>
   <script src="spec/cartTest.js" type="module"></script>
+  <script src="spec/cartOrderSummmaryTest.js" type="module"></script>
 
 </head>
 
 <body>
-    
+    <div class="js-test-container"></div>
 </body>
 </html>
