--- a/amazon.html
+++ b/amazon.html
@@ -27,7 +27,7 @@
         <div class="amazon-header-middle-section">
             <input class="search-bar js-search-bar" type="text" placeholder="Search">
 
-            <button class="search-button">
+            <button class="search-button js-search-button">
                 <img class="search-icon" src="images/icons/search-icon.png">
             </button>
         </div>
